fixes compatibility with symfony 2.1.x

--- a/Resources/views/Question/list.html.twig
+++ b/Resources/views/Question/list.html.twig
@@ -14,8 +14,7 @@
       <td>{{ question.name  }}</td>
       <td>{{ question.text  }}</td>
       <td>{{ question.type  }}</td>
-      <td>
-      </td>
+      <td><a href="{{ path('egulias_quiz_question_edit', { "id" : question.id }) }}">edit</a></td>
     </tr>
   {% endfor %}
   </tbody>
