--- a/Resources/views/Quiz/index.html.twig
+++ b/Resources/views/Quiz/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h1>{% trans %}Available Quizes{% endtrans %}</h1>
+<a class="btn" href="{{ path('egulias_quiz_add') }}">Add Quiz</a>
 <table>
   <thead>
     <th>{% trans %} Quiz Name {% endtrans %}</th>
