--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -17,10 +17,8 @@
         <div id="quiz-wrapper" class="container-fluid">
           {% block navigation %}
           <div class="sidebar">
-            <p><a href="{{ path('egulias_quiz_question') }}">Questions List</a></p>
-            <p><a href="{{ path('egulias_quiz_question_add') }}">Add Question</a></p>
-            <p><a href="{{ path('egulias_quiz_add') }}">Add Quiz</a></p>
-            <p><a href="{{ path('egulias_quiz_panel') }}">Quiz List</a></p>
+            <p><a href="{{ path('egulias_quiz_question') }}">Questions</a></p>
+            <p><a href="{{ path('egulias_quiz_panel') }}">Quizes</a></p>
             <p><a href="{{ path('egulias_quiz_answers') }}">Answers List</a></p>
           </div>
           {% endblock %}
