--- a/Resources/views/Question/list.html.twig
+++ b/Resources/views/Question/list.html.twig
@@ -1,6 +1,7 @@
 {% extends 'EguliasQuizBundle::layout.html.twig' %}
 {% block content %}
 <h1>{% trans %}Available Questions{% endtrans %}</h1>
+<a class="btn" href="{{ path('egulias_quiz_question_add') }}">Add Question</a>
 <table>
   <thead>
     <th>{% trans %} Question Name {% endtrans %}</th>
