--- a/Resources/views/Quiz/update_quiz.html.twig
+++ b/Resources/views/Quiz/update_quiz.html.twig
@@ -1,4 +1,5 @@
 {% extends 'EguliasQuizBundle:Quiz:add_quiz.html.twig' %}
 
+{% block quiz_form_header %} {{ 'Edit Quiz' | trans }}{% endblock %}
 {% block form_action %} {{ path('egulias_quiz_update', {'id':id})}} {% endblock %}
 {% block question_url %}{{ path('egulias_quiz_add_question', {'quiz':id})}}{% endblock  %}
