--- a/Resources/views/Question/list.html.twig
+++ b/Resources/views/Question/list.html.twig
@@ -1,13 +1,13 @@
 {% extends 'EguliasQuizBundle::layout.html.twig' %}
 {% block content %}
-<h1>{% trans %}Available Questions{% endtrans %}</h1>
+<h1>{{ 'Available Questions' | trans( {} , 'Quiz' ) }}</h1>
 <a class="btn" href="{{ path('egulias_quiz_question_add') }}">Add Question</a>
 <table>
   <thead>
-    <th>{% trans %} Question Name {% endtrans %}</th>
-    <th>{% trans %} Question {% endtrans %}</th>
-    <th>{% trans %} Question Type {% endtrans %}</th>
-    <th>{% trans %} Actions {% endtrans %}</th>
+    <th>{{ 'Question Name' | trans( {} , 'Quiz' ) }}</th>
+    <th>{{ 'Question' | trans( {} , 'Quiz' ) }}</th>
+    <th>{{ 'Question Type' | trans( {} , 'Quiz' ) }}</th>
+    <th>{{ 'Actions' | trans( {} , 'Quiz' ) }}</th>
   </thead>
   <tbody>
   {% for question  in questions  %}
