--- a/Resources/views/Question/quizQuestionForm.html.twig
+++ b/Resources/views/Question/quizQuestionForm.html.twig
@@ -7,14 +7,14 @@
     {{ form_widget(questionForm.question) }}
     </div>
     <div class="clearfix">
-    {{ form_label(questionForm.delete) }}
-    {{ form_errors(questionForm.delete) }}
-    {{ form_widget(questionForm.delete) }}
-    </div>
-    <div class="clearfix hidden">
     {{ form_label(questionForm.quiz) }}
     {{ form_errors(questionForm.quiz) }}
     {{ form_widget(questionForm.quiz) }}
+    </div>
+    <div class="clearfix">
+    {{ form_label(questionForm.delete) }}
+    {{ form_errors(questionForm.delete) }}
+    {{ form_widget(questionForm.delete) }}
     </div>
     {{ form_widget(questionForm) }}
   </td>
