--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -9,7 +9,10 @@
         {% block extra_css %}{% endblock %}
         <title>{% block quiz_bundle_title %}Quiz Bundle{% endblock %}</title>
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script>
+            window.jQuery || document.write('<script src="{{ asset('components/jquery/jquery.min.js') }}"><\/script>')
+        </script>
 
         {% block extra_js %}{% endblock %}
     </head>
