fixes the templates in order to be able to reply the quiz properly

--- a/Resources/views/Question/questionForm.html.twig
+++ b/Resources/views/Question/questionForm.html.twig
@@ -34,19 +34,19 @@
     <div class="add_options" >
         <div class="clearfix">
             <div class="question_options">
-                <input type="hidden" name="question[choices][1][label]" value="a">
+                <!-- <input type="hidden" name="question[choices][1][label]" value="a"> -->
                 <input type="text" name="question[choices][1][value]" class="choice_value" required="true" placeholder="Choice A">
             </div>
             <div class="question_options">
-                <input type="hidden" name="question[choices][2][label]" value="b">
+                <!-- <input type="hidden" name="question[choices][2][label]" value="b"> -->
                 <input type="text" name="question[choices][2][value]" class="choice_value" required="true" placeholder="Choice B">
             </div>
             <div class="question_options">
-                <input type="hidden" name="question[choices][3][label]" value="c">
+                <!-- <input type="hidden" name="question[choices][3][label]" value="c"> -->
                 <input type="text" name="question[choices][3][value]" class="choice_value" required="true" placeholder="Choice C">
             </div>
             <div class="question_options">
-                <input type="hidden" name="question[choices][4][label]" value="d">
+                <!-- <input type="hidden" name="question[choices][4][label]" value="d"> -->
                 <input type="text" name="question[choices][4][value]" class="choice_value" required="true" placeholder="Choice D">
             </div>
         </div>
