--- a/Resources/views/Quiz/add_quiz.html.twig
+++ b/Resources/views/Quiz/add_quiz.html.twig
@@ -7,27 +7,28 @@
 
 {% block content %}
         <h1>{% block quiz_form_header %} {{ 'New Quiz' | trans }}{% endblock %}</h1>
-<form action="{% block form_action %} {{ path('egulias_quiz_save')}} {% endblock %}" method="POST" {{
-  form_enctype(form)}} class = "form-stacked" >
-<div class="clearfix">
-  {{ form_label(form.name) }}
-  {{ form_errors(form.name) }}
-  {{ form_widget(form.name) }}
-  <span class="help-block"><strong>{% trans %}Note: {% endtrans %}</strong>{{ 'The name of the Quiz' | trans( {} , 'Quiz' ) }}</span>
-</div>
-<div class="clearfix">
-  {{ form_label(form.questions) }}
-  <span class="help-block"><a href="{% block question_url %}{{ path('egulias_quiz_add_question')}}{% endblock  %}"
-  class='addQuestion' >Add a Question</a></span>
-  {{ form_errors(form.questions) }}
-  {{ form_widget(form.questions) }}
-  <span class="help-block"><strong>{% trans %}Note: {% endtrans %}</strong>{% trans %} Use the link above to add new
-  questions to the quiz{% endtrans %}</span>
-</div>
-{{ form_widget(form) }}
-<table id='questions_table'>
-</table>
-<button type='submit' class="btn primary">{{ 'Save Quiz' | trans( {} , 'Quiz' ) }}</button>
+<form action="{% block form_action %} {{ path('egulias_quiz_save')}} {% endblock %}" method="POST" {{  form_enctype(form)}} class = "form-stacked" >
+
+    <div class="clearfix">
+      {{ form_label(form.name) }}
+      {{ form_errors(form.name) }}
+      {{ form_widget(form.name) }}
+      <span class="help-block"><strong>{% trans %}Note: {% endtrans %}</strong>{{ 'The name of the Quiz' | trans( {} , 'Quiz' ) }}</span>
+    </div>
+
+    <div class="clearfix">
+      {{ form_label(form.questions) }}
+      <span class="help-block"><a href="{% block question_url %}{{ path('egulias_quiz_add_question')}}{% endblock  %}"
+      class='addQuestion' >Add a Question</a></span>
+      {{ form_errors(form.questions) }}
+      {{ form_widget(form.questions) }}
+      <span class="help-block"><strong>{% trans %}Note: {% endtrans %}</strong>{% trans %} Use the link above to add new questions to the quiz{% endtrans %}</span>
+    </div>
+
+    {{ form_widget(form) }}
+
+    <table id='questions_table'></table>
+    <button type='submit' class="btn primary">{{ 'Save Quiz' | trans( {} , 'Quiz' ) }}</button>
 </form>
 {% endblock %}
 
