--- a/Resources/views/Quiz/take_quiz.html.twig
+++ b/Resources/views/Quiz/take_quiz.html.twig
@@ -5,11 +5,16 @@
 <form action="{% block form_action %} {{ path('egulias_quiz_save_response',{'id':quiz.id})}} {% endblock %}" method="POST" {{
   form_enctype(quizForm)}} class="form-stacked" >
     <div class="clearfix">
-    {% for question in quizForm.questions %}
-    <h5>{% trans %}Question nº {% endtrans  %}{{ loop.index  }}</h5>
-    {{ form_errors(question.answer) }}
-    {{ form_widget(question.answer) }}
-    {{ form_widget(question) }}
+    {% for quizquestion in quizForm.questions %}
+        <h5>{% trans %}Question nº {% endtrans  %}{{ loop.index  }}</h5>
+        <h3>{{ quizquestion.vars.value.question.name }}</h3>
+        <p>
+            {{ quizquestion.vars.value.question.text }}
+        </p>
+
+        {{ form_errors(quizquestion.answer) }}
+        {{ form_widget(quizquestion.answer) }}
+        {{ form_widget(quizquestion) }}
     {% endfor %}
     </div>
     {{ form_widget(quizForm._token) }}
