--- a/Resources/views/Answer/index.html.twig
+++ b/Resources/views/Answer/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'EguliasQuizBundle::layout.html.twig' %}
 
 {% block content %}
-<h1>{{ 'Answered Answers' | trans( {} , 'Quiz' ) }}</h1>
+<h1>{{ 'Answered Results' | trans( {} , 'Quiz' ) }}</h1>
 <table>
   <thead>
     <th>{{ 'Quiz Instance UUID' | trans( {} , 'Quiz' ) }}</th>
     <th>{{ 'Quiz Name' | trans( {} , 'Quiz' ) }}</th>
     <th>{{ 'Question' | trans( {} , 'Quiz' ) }}</th>
-    <th>{{ 'Resonse' | trans( {} , 'Quiz' ) }}</th>
-    <th>{{ 'Resonse Date' | trans( {} , 'Quiz' ) }}</th>
+    <th>{{ 'Answer' | trans( {} , 'Quiz' ) }}</th>
+    <th>{{ 'Answer Date' | trans( {} , 'Quiz' ) }}</th>
   </thead>
   <tbody>
   {% for answer in answers  %}
